# MCO-Protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  architecture.md  mco_killer_readme.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
Gradio-Hackathon/: Dockerfile  README.md  SESSION_HANDOFF.md  app.py  mco.features  mco.sc  mcp-config.json  modal_llm_client.py  package.json  requirements.txt  test_gradio.py  test_modal_integration.py
Gradio-Hackathon/mco-hackathon-final/: README.md  app.py  gradio_ui.py  integration_documentation.md  knowledge_graph.md  main.py  modal_agent_design.md  modal_implementation.py  requirements.txt  snlp_generator.py  user_guide.md  validation_report.md
Gradio-Hackathon/workflow/: mco.core  mco.styles
docs/: MCO Server Documentation.md  SNLP: Syntactical Natural Language Programming.md  adapter_development.md  adapter_development_guide.md  configuration_guide.md  documentation.md  file_types.md  integration_examples.md  snlp_syntax.md  validation.md  visual_setup_tool_design.md
examples/research_assistant/: mco.features  mco.styles
examples/templates/: adapter_template.py
lib/: index.js  mcp-tool-provider.js  orchestration-engine.js  snlp-parser.js
src/mco/: README.md  mco.core  mco.features  mco.sc  mco.styles
src/mco_server/: __init__.py  (+1 more)
src/mco_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  mock_lmstudio.py  test_config.py  test_state.py
(+17 files in other folders)
